--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -13,9 +13,6 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <button (click)="onReload()">Reload Servers</button>
-    <app-edit-server></app-edit-server>
-    <hr />
-    <!-- <app-server></app-server> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
