--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -10,7 +10,5 @@
       </a>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-4">
-    <app-user></app-user>
-  </div>
+  <div class="col-xs-12 col-sm-4"><router-outlet></router-outlet>></div>
 </div>
